Use tiny-slider for promotion section

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#carousel-ow {
+  height: 25%;
+}
+
+#carousel-mw, #carousel-iw, #carousel {
+  height: 100%;
+}
