--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,26 @@
 #carousel-mw, #carousel-iw, #carousel {
   height: 100%;
 }
+
+.outlet-gmap-wrapper iframe {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 2;
+}
+
+
+@media (min-width: 640px) {
+  .outlet-gmap-wrapper iframe {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 3.5;
+  }
+}
+
+@media (min-width: 1024px) {
+  .outlet-gmap-wrapper iframe {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 5/4;
+  }
+}
