--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #carousel-ow {
   height: 25%;
   max-width: 1080px;
